<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/select_city_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_city_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/appCompatSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_city_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/select_ticket_type_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_ticket_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatSpinner" />

    <RadioGroup
        android:id="@+id/select_ticket_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_ticket_type_title">

        <RadioButton
            android:id="@+id/interline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/interline" />

        <RadioButton
            android:id="@+id/one_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_line" />

        <RadioButton
            android:id="@+id/in_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_turn" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/select_bus_number_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_bus_number_title"
        app:layout_constraintTop_toBottomOf="@+id/select_ticket_type_group" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/select_bus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/select_bus_number_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/select_duration_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_duration"
        app:layout_constraintTop_toBottomOf="@+id/select_bus" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/select_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/select_duration_title" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_calendar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/total_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/total_money_title"
        app:layout_constraintEnd_toStartOf="@+id/total_money"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_calendar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/total_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/total_title"
        app:layout_constraintTop_toBottomOf="@+id/select_calendar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_buy_ticket"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buy_ticket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>