<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/contentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        tools:text="@string/test" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_date_of_birth"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="@id/date_of_birth"
        app:layout_constraintTop_toBottomOf="@+id/full_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date_of_birth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingStart="40dp"
        app:layout_constraintEnd_toStartOf="@+id/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/full_name"
        tools:text="@string/date_of_birth_text" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_phone"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/phone_number"
        app:layout_constraintStart_toEndOf="@+id/date_of_birth" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date_of_birth"
        app:layout_constraintTop_toBottomOf="@+id/full_name"
        tools:text="@string/phone_number_test" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_bus"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/form_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_of_birth" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/form_code"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_get_code"
        app:layout_constraintStart_toEndOf="@+id/ic_bus"
        app:layout_constraintTop_toTopOf="@+id/btn_get_code">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_get_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/form_code_validate"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_code">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/code_validate_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/form_code_validate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/duration_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>